Fix crash when deleting a comment and using PostgreSQL >= 8.3. Automatic typecasts are no longer done in this new PostgreSQL release. Comment IDs are strings in Java and integers in db-schema (why?).
http://www.postgresql.org/docs/current/static/release-8-3.html